<resources>
    <string name="app_name">SplitBall</string>
    <string name="title_activity_main_menu">activity_MainMenu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>
    <string name="splitball_logo">SplitBall Logo</string>
    <string name="men_principal">Menú principal</string>
    <string name="settings">Settings</string>
    <string name="connect_to_social">Connect to Social</string>
    <string name="play_game">Play Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="ajustes">Ajustes</string>
    <string name="jugar">Jugar</string>
    <string name="conectate_a_las_redes_sociales">Conecta redes sociales</string>
    <string name="lideres">Líderes</string>
    <string name="slide_to_adjust_music_volume">Slide to Adjust Music Volume</string>
    <string name="back_to_main">Back to Main</string>
    <string name="deslice_para_musica">Deslice para ajustar el volumen de la música</string>
    <string name="deslice_para_sfx">Deslice para ajustar el volumen SFX</string>
    <string name="sfx_volume">SFX Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="mute_unmute">Mute/Unmute</string>
    <string name="languages">Languages</string>
    <string name="idiomas">Idiomas</string>
    <string name="volumen_de_sfx">Volumen de SFX</string>
    <string name="volumen_de_la_m_sica">Volumen de la música</string>
    <string name="silenciar">Silenciar</string>
    <string name="dejar_de_silenciar">Dejar de Silenciar</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="resume">Resume</string>
    <string-array name="username">
        <item>User1</item>
        <item>User2</item>
        <item>User3</item>
        <item>User4</item>
        <item>User5</item>
        <item>User6</item>
        <item>User7</item>
        <item>User8</item>
        <item>User9</item>
        <item>User10</item>
    </string-array>
    <integer-array name="high_scores">
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </integer-array>
</resources>