<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spitballbg"
    android:orientation="horizontal"
    tools:context=".MainMenu">


    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="159dp"
        android:layout_height="127dp"
        android:layout_marginBottom="88dp"
        android:background="@color/black"
        android:text="@string/togglebutton"
        android:textColor="#FFFFFF"
        android:textOff="@string/silenciar"
        android:textOn="@string/dejar_de_silenciar"
        app:layout_constraintBottom_toBottomOf="@+id/backToMainSP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backToMainSP"
        android:layout_width="178dp"
        android:layout_height="74dp"
        android:layout_marginBottom="96dp"
        android:text="@string/men_principal"
        app:backgroundTint="#4f7942"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>