<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/origami2"
    android:orientation="horizontal"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/Splitball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splitball_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splitball" />

    <Button
        android:id="@+id/Espanol"
        android:layout_width="226dp"
        android:layout_height="72dp"
        android:text="@string/espanol"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/Ingles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Ingles"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Ingles"
        android:layout_width="226dp"
        android:layout_height="72dp"
        android:text="@string/ingles"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/MenuSP"
        android:layout_width="226dp"
        android:layout_height="72dp"
        android:layout_marginBottom="76dp"
        android:text="@string/men_principal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>