<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spitballbg"
    android:orientation="horizontal"
    tools:context=".MainMenu">


    <Button
        android:id="@+id/classroomSP"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginTop="484dp"
        android:text="@string/jugar"
        android:textSize="45sp"
        app:backgroundTint="#4f7942"
        app:layout_constraintEnd_toEndOf="@+id/leaderboardSP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leaderboardSP"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ajustes"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:text="@string/ajustes"
        android:textSize="35sp"
        app:backgroundTint="#4f7942"
        app:layout_constraintEnd_toEndOf="@+id/socialSP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/classroomSP"
        app:layout_constraintStart_toStartOf="@+id/socialSP"
        app:layout_constraintTop_toTopOf="@+id/classroomSP" />

    <Button
        android:id="@+id/socialSP"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/conectate_a_las_redes_sociales"
        android:textSize="25sp"
        app:backgroundTint="#4f7942"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/leaderboardSP"
        app:layout_constraintTop_toBottomOf="@+id/ajustes" />

    <Button
        android:id="@+id/leaderboardSP"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="4dp"
        android:text="@string/lideres"
        android:textSize="40sp"
        app:backgroundTint="#4f7942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classroomSP" />


</androidx.constraintlayout.widget.ConstraintLayout>