<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/origami2"
    android:orientation="horizontal"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/Splitball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splitball" />

    <Button
        android:id="@+id/settings"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="8dp"
        android:text="@string/settings"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/social"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/leaderboard"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="96dp"
        android:text="@string/leaderboard"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/social"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/social"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginBottom="4dp"
        android:text="@string/connect_to_social"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/classroom"
        android:layout_width="300dp"
        android:layout_height="78dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/play_game"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/settings"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/music"
        android:layout_width="122dp"
        android:layout_height="58dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>